# athena-bedrock-genai

./: .env.template  Makefile  README.md  pyproject.toml
infra/: Dockerfile  init.sql
rag_dataset/: schema.json  valid_examples.json
rag_dataset/examples/: error_examples.json  valid_examples.json
rag_dataset/schema/: schema.json
src/: app.py
src/embeding/: embed.py
src/query/: executor.py  generator.py
