[project]
name = "athena-bedrock-gen-ai"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "devsarvesh92", email = "sarveshdev92@gmail.com"},
]
dependencies = [
    "faiss-cpu>=1.8.0",
    "langchain>=0.1.17",
    "boto3>=1.34.84",
    "streamlit>=1.34.0",
    "jq>=1.7.0",
    "sqlglot>=23.12.2",
    "langchain-postgres>=0.0.3",
    "psycopg2>=2.9.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
